# NAsales_quantplan

./: Control-Tower-Channel-Granularity-Alignment.md  Decision-OS-v1.0-Architecture.md  Decision-OS-v1.0.md  Decision-OS-v2.0-Architecture.md  Decision-OS-v2.0.md  Decision-OS-v3.0-Dashboard-Spec.md  Decision-OS-v3.0.md  Deep-Report-Crosswalk.md  Horizontal-System-DOCX-Crosswalk.md  Horizontal-System-Management-Module.md  Horizontal-System-Quantitative-Structure.md  Part0-1-Architecture-Optimization-Crosswalk.md  Part0-Quantitative-Structure.md  Part0-Research-Governance-And-Decision-Charter.md  Part1-Deep-Optimization-Crosswalk.md  Part1-Market-Research-Framework-Outline.md  Part1-Market-Research-Framework.md  Part1-Methodology-Reliability-Validation.md  Part1-Part2-DecisionOS-Bridge.md  Part1-Quantitative-Optimization-Plan.md  Part1-Quantitative-Structure.md  Part2-Deep-Optimization-Crosswalk.md  Part2-Quantitative-Optimization-Plan.md  Part2-Quantitative-Structure.md  Part3-China-Supply-Chain-Export-Strategy.md  Part3-Deep-Optimization-Crosswalk.md  Part3-Quantitative-Optimization-Plan.md  Part3-Quantitative-Structure.md  Part4-Deep-Optimization-Crosswalk.md  Part4-North-America-Go-To-Market-Strategy.md  Part4-Quantitative-Optimization-Plan.md  Part4-Quantitative-Structure.md  Part5-Execution-Optimization-Crosswalk.md  Part5-GitHub-Crosswalk.md  Part5-Post-Launch-Operations-Optimization-Strategy.md  Part5-Quantitative-Structure.md  Quant-Report-Contract.md  README.md  requirements.txt
decision-os/: .env.dev  .env.example  .env.prod  .env.staging  .gitignore  README.md  (+3 more)
(+616 files in other folders)
